@@ -1,5 +1,5 @@
 #
-# show the dxcc number for each callsign or prefix entered
+# show the heading and distance for each callsign or prefix entered
 #
 # $Id$
 #
@@ -18,16 +18,17 @@ if (!$long && !$lat) {
 }
 
 foreach $l (@list) {
-  my @ans = Prefix::extract($l);
-  next if !@ans;
-  my $pre = shift @ans;
-  my $a;
-  foreach $a (@ans) {
-	  my ($b, $dx) = DXBearing::bdist($lat, $long, $a->{lat}, $a->{long});
-	  my ($r, $rdx) = DXBearing::bdist($a->{lat}, $a->{long}, $lat, $long);
-	  push @out, sprintf "%-9s (%s, %s) Bearing: %.0f Recip: %.0f %.0fKm %.0fMi", uc $l, $pre, $a->name(), $b, $r, $dx, $dx * 0.62133785;
-	  $l = "";
-  }
+	# prefixes --->
+	my @ans = Prefix::extract($l);
+	next if !@ans;
+	my $pre = shift @ans;
+	my $a;
+	foreach $a (@ans) {
+		my ($b, $dx) = DXBearing::bdist($lat, $long, $a->{lat}, $a->{long});
+		my ($r, $rdx) = DXBearing::bdist($a->{lat}, $a->{long}, $lat, $long);
+		push @out, sprintf "%-9s (%s, %s) Bearing: %.0f Recip: %.0f %.0fKm %.0fMi", uc $l, $pre, $a->name(), $b, $r, $dx, $dx * 0.62133785;
+		$l = "";
+	}
 }
 
 return (1, @out);
